mtp: Fix volume removal with current udev behavior

UDev events for devices without ID_MTP_DEVICE property are ignored.
Although ID_MTP_DEVICE seems don't have to be set for device when removing
and thus the volume is not removed. Let's ignore ID_MTP_DEVICE when removing.

https://bugzilla.gnome.org/show_bug.cgi?id=789491